test/valid/fc51601_global_scope_var/global_scope_var.mag
--- Author: fc51601, José Sousa

const a : Int = 1
fun main (_) : Unit -> Unit = print(a)
