test/invalid-syntax/58196_missing_equals/missing_equals.mag
-- Author: 58196, Pedro Lopes

-- Missing "=" token, invalidating the SYNTAX

const speed : Int 120

fun main (_) : Unit -> Unit = print(speed)
